Nestjs connection with Mongodb and perform Crud operation

--- a/.local.env
+++ b/.local.env
@@ -1,2 +1,1 @@
-PORT=3000
-LOGGING=true
+MONGO-URI=mongodb+srv://users-open-to-all:hiPassword123@cluster0.uh35t.mongodb.net/irshad_DB?retryWrites=true&w=majority
