--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "@nestjs/apollo": "^10.1.6",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/event-emitter": "^1.3.1",
     "@nestjs/graphql": "^10.1.6",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
     "apollo-server-express": "^3.11.1",
+    "class-validator": "^0.13.2",
     "graphql": "^16.6.0",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
